Add logical key to all entities except FlightLog.